schema/testdata/errors/attribute_expression_unresolvable_rhs.keel
model Post {
    fields {
        author Author
        title Text
        subTitle Text
        someId ID
    }

    actions {
        update updatePost2(id) with (title) {
            //expect-error:34:39:AttributeExpressionError:unknown identifier 'thing'
            @set(post.subTitle = thing.title)
        }
    }
}

model Author {
    fields {
        posts Post[]
    }
}
